# zemax_to_cad

./: .gitignore  AT_ZOS.py  Prescription2swTxt.py  Prescription_Reader.py  Prescription_Writer.py  README.md  Surface.py  paper.md  pyproject.toml
ZOS/: m_generate_prescription_txt.m  pop_example.m
data/: coords.txt  coords_small.txt  coords_small_c1.txt  coords_small_c2.txt
docs/examples/: m_minimal_multiconfig.py  tmp_zemax_to_text.py  x_get_beam_angles.py  x_get_distances.py
docs/examples/Zemax_txts/: hdllr_c1.txt  hdllr_c2.txt  hdllr_c3.txt  hdllr_c4.txt
tests/: large_presc_data.txt  test_Prescription_Writer.py  test_csv.csv  test_csv2.csv  test_data.txt  test_datac2.txt  test_optical_system.py  test_surface.py
zemax_to_cad/: __init__.py  optical_system.py  surface.py
